--- a/1-Authentication/2-sign-in-angular/SPA/src/app/home/home.component.html
+++ b/1-Authentication/2-sign-in-angular/SPA/src/app/home/home.component.html
@@ -21,9 +21,11 @@
     <!-- Value Column -->
     <ng-container matColumnDef="value">
       <th mat-header-cell *matHeaderCellDef> Value </th>
-      <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+      <td mat-cell *matCellDef="let element"
+          [class.redacted]="isSensitive(element.claim)"
+          [title]="isSensitive(element.claim) ? formatValue(element.value) : ''"> {{formatValue(element.value)}} </td>
     </ng-container>
-    <!-- Value Column -->
+    <!-- Description Column -->
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef> Description </th>
       <td mat-cell *matCellDef="let element"> {{element.description}} </td>
@@ -31,4 +33,45 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</div>
+
+<!-- Access token claims table -->
+<br />
+<p class="text-center" *ngIf="loginDisplay">
+  See below the claims in your <strong> Access token </strong> (if available).
+</p>
+<div id="access-table-container" *ngIf="loginDisplay">
+  <table mat-table [dataSource]="accessDataSource" class="mat-elevation-z8" *ngIf="accessDataSource && accessDataSource.length">
+    <!-- Claim Column -->
+    <ng-container matColumnDef="claim">
+      <th mat-header-cell *matHeaderCellDef> Claim </th>
+      <td mat-cell *matCellDef="let element"> {{element.claim}} </td>
+    </ng-container>
+
+    <!-- Value Column -->
+    <ng-container matColumnDef="value">
+      <th mat-header-cell *matHeaderCellDef> Value </th>
+      <td mat-cell *matCellDef="let element"
+          [class.redacted]="isSensitive(element.claim)"
+          [title]="isSensitive(element.claim) ? formatValue(element.value) : ''"> {{formatValue(element.value)}} </td>
+    </ng-container>
+
+    <!-- Description Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <!-- If token exists but no parsed claims, show raw token -->
+  <mat-card *ngIf="accessToken && (!accessDataSource || accessDataSource.length === 0)">
+    <mat-card-title>Raw Access Token</mat-card-title>
+    <mat-card-content>
+    <pre style="word-break:break-all">{{ accessToken }}</pre>
+    </mat-card-content>
+  </mat-card>
+
 </div>
